Face Extrude with Constrain to Axis incorrectly defaults to Normal Orientation #80937

Closed
opened 2020-09-18 17:13:15 +02:00 by Adam Janz · 13 comments

System Information
Operating system: Windows-8.1-6.3.9600-SP0 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66

Blender Version
Broken: version: 2.90.0, branch: master, commit date: 2020-08-31 11:26, hash: 0330d1af29
Worked: 2.83.3, branch: master, commit date: 2020-07-22 06:01, hash: 353e5bd749

Short description of error
With the transformation orientation set to Global, extruding a face and then pressing x,y, or z to constrain to an axis will result in the orientation switching to Normal orientation of that axis, rather than the Global orientation. This requires an additional toggle of the x,y, or z key to switch to the Global axis. However, extruding an edge or vertex respects the Global orientation immediately. This bug was introduced in Blender 2.9, as Blender 2.83.3 still works correctly when extruding a face, with no extra toggle required.

Exact steps for others to reproduce the error
Open a new file and enter face select mode.
With transformation orientation set to Global, select one of the default cube's faces aligned with the Y axis and hit E to extrude and Y to constrain to the Global Y axis.
Note that the extrude incorrectly snaps to the Normal Y axis, requiring a second toggle of Y to constrain to the Global axis. Perform the same procedure on a vertex and edge, and note that the extrude respects the Global Y axis, no second toggle of Y is required. Compare to Blender 2.83.3, and all extrudes (face, edge, or vertex) work correctly.

Thank you for investigating this issue.

Best regards,
Adam Janz

**System Information** Operating system: Windows-8.1-6.3.9600-SP0 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66 **Blender Version** Broken: version: 2.90.0, branch: master, commit date: 2020-08-31 11:26, hash: `0330d1af29` Worked: 2.83.3, branch: master, commit date: 2020-07-22 06:01, hash: `353e5bd749` **Short description of error** With the transformation orientation set to Global, extruding a face and then pressing x,y, or z to constrain to an axis will result in the orientation switching to Normal orientation of that axis, rather than the Global orientation. This requires an additional toggle of the x,y, or z key to switch to the Global axis. However, extruding an edge or vertex respects the Global orientation immediately. This bug was introduced in Blender 2.9, as Blender 2.83.3 still works correctly when extruding a face, with no extra toggle required. **Exact steps for others to reproduce the error** Open a new file and enter face select mode. With transformation orientation set to Global, select one of the default cube's faces aligned with the Y axis and hit E to extrude and Y to constrain to the Global Y axis. Note that the extrude incorrectly snaps to the Normal Y axis, requiring a second toggle of Y to constrain to the Global axis. Perform the same procedure on a vertex and edge, and note that the extrude respects the Global Y axis, no second toggle of Y is required. Compare to Blender 2.83.3, and all extrudes (face, edge, or vertex) work correctly. Thank you for investigating this issue. Best regards, Adam Janz
Author

Added subscriber: @AdamJanz

Added subscriber: @AdamJanz

#81825 was marked as duplicate of this issue

#81825 was marked as duplicate of this issue

Added subscriber: @Baardaap

Added subscriber: @Baardaap

Added subscriber: @Will5

Added subscriber: @Will5

Added subscriber: @mano-wii

Added subscriber: @mano-wii

The orientation system was practically redone in the transform code.

In Blender 2.83.3 it was, to say the least, unpredictable.

As you mentioned, when the scene orientation was set to Global, when clicking on another constrain axis in the extrude, the orientation changed from Normal to Global. When clicking again, it changed to Local (But why Local? How can I go back to Normal?)
If the orientation of the scene was set to Local, when clicking on another constrain axis in the extrude, the orientation did not change, it remained Normal. When clicking again it changed to Global (But why Global? How can I use Local orientation as set in the scene?)

The new system tries to resolve these loose ends.

The extrude operator is a macro. It first inserts faces and then moves those faces in the Z direction with the Normal orientation.
By convention during a movement with constrain, if you change from Z to Y or X, the orientation does not change. It only changes when the keys are repeated (XX, YY, ZZ).

For new users this is more predictable.

We can make exceptions here and there. (Especially because Global is more useful than Normal), but is it worth making the behavior more unpredictable?

In summary the idea proposed in this report is:

The Z-constrained Move operation obtained from the extrude operator should not behave like a conventional Z-constrained move.
If the orientation of the scene is Global, when choosing another constraint axis (X or Y), the orientation must be changed from Normal to Global.
Still with the scene orientation set to Global, if the same constraint key is pressed, the orientation must change to Local (not Normal).
If the orientation of the scene is not Global, when choosing another constrain axis (X or Y), the orientation must not change, it must remain as Normal.
If the same constrain key is pressed, the orientation used must be Global (not that of the scene).
The orientation system was practically redone in the transform code. In Blender 2.83.3 it was, to say the least, unpredictable. As you mentioned, when the scene orientation was set to Global, when clicking on another constrain axis in the extrude, the orientation changed from Normal to Global. When clicking again, it changed to Local (But why Local? How can I go back to Normal?) If the orientation of the scene was set to Local, when clicking on another constrain axis in the extrude, the orientation did not change, it remained Normal. When clicking again it changed to Global (But why Global? How can I use Local orientation as set in the scene?) The new system tries to resolve these loose ends. The extrude operator is a macro. It first inserts faces and then moves those faces in the Z direction with the Normal orientation. By convention during a movement with constrain, if you change from Z to Y or X, the orientation does not change. It only changes when the keys are repeated (XX, YY, ZZ). For new users this is more predictable. We can make exceptions here and there. (Especially because Global is more useful than Normal), but is it worth making the behavior more unpredictable? In summary the idea proposed in this report is: ``` The Z-constrained Move operation obtained from the extrude operator should not behave like a conventional Z-constrained move. If the orientation of the scene is Global, when choosing another constraint axis (X or Y), the orientation must be changed from Normal to Global. Still with the scene orientation set to Global, if the same constraint key is pressed, the orientation must change to Local (not Normal). If the orientation of the scene is not Global, when choosing another constrain axis (X or Y), the orientation must not change, it must remain as Normal. If the same constrain key is pressed, the orientation used must be Global (not that of the scene). ```
Author

@mano-wii Thank you Germano for that explanation. I can see there was a bit of inconsistent behavior even in 2.83, although under normal circumstances, I never ran into it. However, for consistency, when performing a face extrude, whether in X, Y, or Z, the behavior should default to the constrained normal Z move, but upon pressing X, Y, or Z, it should immediately switch constraint to whatever Transformation Orientation has been set in the Header (Either Global, Local, Normal, etc.). There should be NO attempting to "guess" what the most helpful orientation should be, it should fully respect whatever has been manually set in the Transformation Orientation dropdown.

Thanks again.

  • Adam Janz
@mano-wii Thank you Germano for that explanation. I can see there was a bit of inconsistent behavior even in 2.83, although under normal circumstances, I never ran into it. However, for consistency, when performing a face extrude, whether in X, Y, or Z, the behavior should default to the constrained normal Z move, but upon pressing X, Y, or Z, it should immediately switch constraint to whatever Transformation Orientation has been set in the Header (Either Global, Local, Normal, etc.). There should be NO attempting to "guess" what the most helpful orientation should be, **it should fully respect whatever has been manually set in the Transformation Orientation dropdown.** Thanks again. - Adam Janz

I'm not sure I got it right.
The orientation shown in the header when extruding is "normal":
image.png

If you press Z again, it goes to the orientation "set in the Transformation Orientation dropdown".

By convention if you press a different value for the active constrain axis, the orientation does not change (remains normal).

So the current behavior is not inconsistent. (It just might not be the most useful).


I've been thinking about a solution for this and I had an idea of something that can help.
My idea is, whenever you change the constrain axis, the orientation goes to the set for the scene (not keeping the current orientation).
This is likely to be more useful than current behavior.

I'm not sure I got it right. The orientation shown in the header when extruding is `"normal"`: ![image.png](https://archive.blender.org/developer/F8917084/image.png) If you press Z again, it goes to the orientation "set in the Transformation Orientation dropdown". By convention if you press a different value for the active constrain axis, the orientation does not change (remains normal). So the current behavior is not inconsistent. (It just might not be the most useful). ---- I've been thinking about a solution for this and I had an idea of something that can help. My idea is, whenever you change the constrain axis, the orientation goes to the set for the scene (not keeping the current orientation). This is likely to be more useful than current behavior.

This issue was referenced by 388b916246

This issue was referenced by 388b9162469650c7b0523c2fb9c88bbe2dee1567
Author

@mano-wii Thank you, Germano. I think your solution would be best. When deliberately constraining to an axis while extruding vertices or edges, people already expect the current "Transformation Orientation" to be used. Likewise, when deliberately constraining to an axis while extruding a face, the current "Transformation Orientation" should also be used.

I think it is okay that a face extrude uses the "Normal" orientation by default after pressing "E" to extrude, as this can be helpful. However, as soon as a user commands the extrude to constrain to X, Y, or Z, then the orientation preference set in the "Transformation Orientation" dropdown should be used (whether, Global, Local, Normal, etc.).

Thanks so much for all your great work.

  • Adam Janz
@mano-wii Thank you, Germano. I think your solution would be best. When deliberately constraining to an axis while extruding vertices or edges, people already expect the current "Transformation Orientation" to be used. Likewise, when deliberately constraining to an axis while extruding a face, the current "Transformation Orientation" should also be used. I think it is okay that a face extrude uses the `"Normal"` orientation by default after pressing `"E"` to extrude, as this can be helpful. **However, as soon as a user commands the extrude to constrain to X, Y, or Z, then the orientation preference set in the "Transformation Orientation" dropdown should be used (whether, `Global`, `Local`, `Normal`, etc.).** Thanks so much for all your great work. - Adam Janz

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-09-25 15:24:44 +02:00
Author

Awesome, thank you, Germano! This will make everything so much better and more intuitive now. Have a great day!

  • Adam Janz
Awesome, thank you, Germano! This will make everything so much better and more intuitive now. Have a great day! - Adam Janz

Added subscriber: @johnny_312

Added subscriber: @johnny_312
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80937
No description provided.